# PerformanceOverlay

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  config.example.ini
include/: all_plugins.h  constants.h
src/: main.c  ui_draw.c
src/app/: main.cpp
src/core/config/: config_manager.cpp  config_manager.h
src/core/metrics/: claude_usage_provider.cpp  claude_usage_provider.h  cpu_provider.cpp  cpu_provider.h  datetime_provider.cpp  datetime_provider.h  disk_provider.cpp  disk_provider.h  gpu_provider.cpp  gpu_provider.h  history.h  metric_provider.h  metrics_service.cpp  metrics_service.h  network_provider.cpp  network_provider.h  prayer_provider.cpp  prayer_provider.h  process_provider.cpp  process_provider.h  ram_provider.cpp  ram_provider.h  uptime_provider.cpp  uptime_provider.h  volume_provider.cpp  volume_provider.h
src/core/platform/windows/: overlay_controller.cpp  overlay_controller.h
src/core/services/: startup_service.cpp  startup_service.h  task_killer_model.cpp  task_killer_model.h  tray_service.cpp  tray_service.h
src/plugins/: plugin_claude_usage.c  plugin_gpu.c
src/presentation/visual3d/: sphere_point_geometry.cpp  sphere_point_geometry.h
src/ui/qml/: AppShell.qml  Fmt.qml  Main.qml  Nav.qml
src/ui/qml/components/: AlertVeil.qml  CenterVisual.qml  CenterVisual2D.qml  CircularGauge.qml  HudPanel.qml  LineChart.qml  NavBar.qml  Panel.qml  SegmentBar.qml  Sparkline.qml  Sphere3D.qml  StatBox.qml  TopBar.qml
src/ui/qml/screens/: CockpitScreen.qml  CompactScreen.qml  SettingsScreen.qml  TasksScreen.qml
src/ui/qml/shaders/: sphere.frag  sphere.vert
src/ui/qml/theme/: Theme.qml
